# jupiter-amm-implementation

./: .gitignore  Cargo.toml  README.md
jupiter/: Cargo.toml  idl.json
jupiter-core/: Cargo.toml  fetch-stake-pool-prog-accounts.sh
jupiter-core/src/: build_swap_transaction.rs  config.rs  constants.rs  lib.rs  main.rs  route.rs  solana_rpc_utils.rs
jupiter-core/src/amms/: account_meta_from_goat_swap.rs  account_meta_from_token_swap.rs  amm.rs  goat_swap_amm.rs  loader.rs  mod.rs  spl_token_swap_amm.rs  stakedex_amms.rs  state.rs  test_harness.rs
jupiter-core/src/curve/: calculator.rs  constant_product.rs  fees.rs  mod.rs  swap_curve.rs
jupiter-core/src/math/: fees.rs  mod.rs  swap_curve_info.rs  token_swap.rs
jupiter-core/src/utils/: math.rs  token.rs
jupiter-core/tests/: test_amms.rs
jupiter-core/tests/fixtures/: README.md  goat_idl.ts
jupiter/src/: lib.rs
