[package]
name = "jupiter-core"
version = "0.1.0"
description = ""
edition = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"] }
serde_json = "1.0.82"
anyhow = "1.0"
serde = "1.0.140"
lazy_static = "1.2.0"
rust_decimal = "1.26.1"
jupiter-amm-interface = "0.2.0"
